--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,24 @@
-# dependencies
-/node_modules
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# production
-/build
-/dist
+node_modules
+dist
+dist-ssr
+*.local
 
-# misc
-.env
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
 .DS_Store
-
-# VS Code
-.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
